<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorAccent"
        android:text="@string/app_name"
        android:gravity="center"
        android:textSize="36sp"
        android:textStyle="bold"
        android:textColor="@color/icons"/>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="10dp">

            <Spinner
                android:id="@+id/spinnerBrand"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:spinnerMode="dropdown"/>

            <Spinner
                android:id="@+id/spinnerModel"
                android:layout_width="match_parent"
                android:layout_marginTop="20dp"
                android:layout_height="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:spinnerMode="dropdown"/>

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/option1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/option1"
                    android:textColor="@color/primary_text"
                    android:layout_gravity="center"/>

                <RadioButton
                    android:id="@+id/option2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/option2"
                    android:textColor="@color/primary_text"
                    android:layout_gravity="center"/>

                <RadioButton
                    android:id="@+id/option3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/option3"
                    android:textColor="@color/primary_text"
                    android:layout_gravity="center"/>
            </RadioGroup>

            <LinearLayout
                android:id="@+id/checkLayout"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/screenGuard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@string/screen_guard"
                    android:layout_gravity="center"/>

                <CheckBox
                    android:id="@+id/backCover"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/back_cover"
                    android:layout_gravity="center"/>

                <CheckBox
                    android:id="@+id/earPhones"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/ear_phones"
                    android:layout_gravity="center"/>
            </LinearLayout>

            <ImageView
                android:id="@+id/imgDisplay"
                android:layout_width="350dp"
                android:layout_height="250dp"
                android:contentDescription="@string/mobileImages"
                android:layout_gravity="center"/>

            <TextView
                android:id="@+id/txtFeatures"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:textAlignment="center"/>

            <SeekBar
                android:id="@+id/seekQuantity"
                android:layout_width="250dp"
                android:layout_height="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginStart="30dp"
                android:max="5"
                android:progress="1"/>
            <TextView
                android:id="@+id/txtQuantity"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:textAlignment="center"/>
        </LinearLayout>
    </ScrollView>

    <TextView
        app:layout_constraintTop_toBottomOf="@id/scrollView"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/txtPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="24sp"/>

    <Button
        android:id="@+id/btnPlaceOrder"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@id/txtPrice"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@color/colorPrimaryDark"
        android:text="@string/place_order"
        android:textColor="@color/icons"
        android:textSize="20sp"
        android:textStyle="bold"/>

</androidx.constraintlayout.widget.ConstraintLayout>